[gd_scene load_steps=67 format=3 uid="uid://bhyctoxdkruw4"]

[ext_resource type="Texture2D" uid="uid://dwjc8aem80mq4" path="res://iloveimg-resized (1)/slime/Sprite Sheet - Green Death.png" id="1_5b0gg"]
[ext_resource type="Script" uid="uid://x1ii2klft78c" path="res://slime.gd" id="1_da4t2"]
[ext_resource type="Texture2D" uid="uid://h0nlfbcn2r3k" path="res://iloveimg-resized (1)/slime/Sprite Sheet - Green Hurt.png" id="2_da4t2"]
[ext_resource type="Texture2D" uid="uid://bpk8w3mf5taj3" path="res://iloveimg-resized (1)/slime/Sprite Sheet - Green Idle.png" id="3_jrxk1"]
[ext_resource type="Texture2D" uid="uid://cur8tcrexeeg8" path="res://iloveimg-resized (1)/slime/Sprite Sheet - Green Jump Start-up.png" id="4_alucd"]
[ext_resource type="Texture2D" uid="uid://cr5xyts3go58k" path="res://iloveimg-resized (1)/slime/Sprite Sheet - Green Jump to Fall.png" id="5_8w6w5"]
[ext_resource type="Texture2D" uid="uid://c7781rcyke0qv" path="res://iloveimg-resized (1)/slime/Sprite Sheet - Green Jump Land.png" id="6_lrvan"]
[ext_resource type="Script" uid="uid://bk02igf2u5nbk" path="res://HurtBox.gd" id="7_0gjuw"]
[ext_resource type="Script" uid="uid://ew50wyttpoli" path="res://slime_hit_box.gd" id="9_da4t2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b48k4"]
atlas = ExtResource("1_5b0gg")
region = Rect2(0, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31ce7"]
atlas = ExtResource("1_5b0gg")
region = Rect2(96, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nowxr"]
atlas = ExtResource("1_5b0gg")
region = Rect2(192, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfmhs"]
atlas = ExtResource("1_5b0gg")
region = Rect2(288, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hagqt"]
atlas = ExtResource("1_5b0gg")
region = Rect2(384, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwq85"]
atlas = ExtResource("1_5b0gg")
region = Rect2(480, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uekmf"]
atlas = ExtResource("1_5b0gg")
region = Rect2(576, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2fkb"]
atlas = ExtResource("1_5b0gg")
region = Rect2(672, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_itray"]
atlas = ExtResource("1_5b0gg")
region = Rect2(768, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cb1b"]
atlas = ExtResource("1_5b0gg")
region = Rect2(864, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8dsn"]
atlas = ExtResource("1_5b0gg")
region = Rect2(960, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c82uy"]
atlas = ExtResource("1_5b0gg")
region = Rect2(1056, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agt0o"]
atlas = ExtResource("1_5b0gg")
region = Rect2(1152, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7hf1"]
atlas = ExtResource("1_5b0gg")
region = Rect2(1248, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncgp5"]
atlas = ExtResource("2_da4t2")
region = Rect2(0, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jtxw"]
atlas = ExtResource("2_da4t2")
region = Rect2(96, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vljus"]
atlas = ExtResource("2_da4t2")
region = Rect2(192, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umduo"]
atlas = ExtResource("2_da4t2")
region = Rect2(288, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4o4n"]
atlas = ExtResource("2_da4t2")
region = Rect2(384, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y485"]
atlas = ExtResource("2_da4t2")
region = Rect2(480, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4oce"]
atlas = ExtResource("2_da4t2")
region = Rect2(576, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h24r4"]
atlas = ExtResource("2_da4t2")
region = Rect2(672, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxxdl"]
atlas = ExtResource("2_da4t2")
region = Rect2(768, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrpi2"]
atlas = ExtResource("2_da4t2")
region = Rect2(864, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rklar"]
atlas = ExtResource("2_da4t2")
region = Rect2(960, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcak7"]
atlas = ExtResource("3_jrxk1")
region = Rect2(0, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56k1c"]
atlas = ExtResource("3_jrxk1")
region = Rect2(96, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqfft"]
atlas = ExtResource("3_jrxk1")
region = Rect2(192, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kimpj"]
atlas = ExtResource("3_jrxk1")
region = Rect2(288, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5itsj"]
atlas = ExtResource("3_jrxk1")
region = Rect2(384, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6upud"]
atlas = ExtResource("3_jrxk1")
region = Rect2(480, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y60gu"]
atlas = ExtResource("3_jrxk1")
region = Rect2(576, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4jda"]
atlas = ExtResource("4_alucd")
region = Rect2(0, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k330k"]
atlas = ExtResource("4_alucd")
region = Rect2(96, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7is2o"]
atlas = ExtResource("4_alucd")
region = Rect2(192, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8jpf"]
atlas = ExtResource("4_alucd")
region = Rect2(288, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkl07"]
atlas = ExtResource("4_alucd")
region = Rect2(384, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvg8m"]
atlas = ExtResource("4_alucd")
region = Rect2(480, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1fi3"]
atlas = ExtResource("4_alucd")
region = Rect2(576, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgdfp"]
atlas = ExtResource("4_alucd")
region = Rect2(672, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfeag"]
atlas = ExtResource("4_alucd")
region = Rect2(768, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c48so"]
atlas = ExtResource("5_8w6w5")
region = Rect2(0, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqkq0"]
atlas = ExtResource("5_8w6w5")
region = Rect2(96, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcney"]
atlas = ExtResource("5_8w6w5")
region = Rect2(192, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd6jp"]
atlas = ExtResource("5_8w6w5")
region = Rect2(288, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dto52"]
atlas = ExtResource("5_8w6w5")
region = Rect2(384, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ys4"]
atlas = ExtResource("6_lrvan")
region = Rect2(0, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1273c"]
atlas = ExtResource("6_lrvan")
region = Rect2(96, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hhig"]
atlas = ExtResource("6_lrvan")
region = Rect2(192, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge73t"]
atlas = ExtResource("6_lrvan")
region = Rect2(288, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m48yy"]
atlas = ExtResource("6_lrvan")
region = Rect2(384, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p7o4"]
atlas = ExtResource("6_lrvan")
region = Rect2(480, 0, 96, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dc7wx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b48k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31ce7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nowxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfmhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hagqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwq85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uekmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2fkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itray")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cb1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8dsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c82uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agt0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7hf1")
}],
"loop": false,
"name": &"Slime_Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncgp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jtxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vljus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umduo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4o4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y485")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4oce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h24r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxxdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrpi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rklar")
}],
"loop": false,
"name": &"Slime_Hurt",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcak7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56k1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqfft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kimpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5itsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6upud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y60gu")
}],
"loop": true,
"name": &"Slime_Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4jda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k330k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7is2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8jpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkl07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvg8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1fi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgdfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfeag")
}],
"loop": false,
"name": &"Slime_Jump_Start-up",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c48so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcney")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd6jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dto52")
}],
"loop": true,
"name": &"Slime_Jump_to_Fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ys4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1273c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hhig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge73t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m48yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p7o4")
}],
"loop": false,
"name": &"Slime_Land",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfo4u"]
size = Vector2(900.3094, 131)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_os3aq"]
size = Vector2(112.88462, 52.41932)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3lcs"]
size = Vector2(37.50004, 21.617699)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2pnbm"]
size = Vector2(32, 21.5)

[node name="Slime" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
script = ExtResource("1_da4t2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dc7wx")
animation = &"Slime_Land"
frame = 5
frame_progress = 1.0

[node name="DetectionArea" type="Area2D" parent="."]
scale = Vector2(14.6, 1)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(372.26025, 59.000004)
scale = Vector2(3.3205478, -4.4)
shape = SubResource("RectangleShape2D_xfo4u")

[node name="HurtBox" type="Area2D" parent="."]
scale = Vector2(0.3538462, 0.38461536)
collision_layer = 4
collision_mask = 8
script = ExtResource("7_0gjuw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 16.900002)
rotation = -3.1415925
scale = Vector2(0.9142218, -1.240001)
shape = SubResource("RectangleShape2D_os3aq")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, 6)
scale = Vector2(1.2399997, 1)
collision_layer = 16
collision_mask = 2
script = ExtResource("9_da4t2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-0.80645156, 0.49999952)
scale = Vector2(0.64516085, 0.8789094)
shape = SubResource("RectangleShape2D_g3lcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.75)
shape = SubResource("RectangleShape2D_2pnbm")
